# Falco

./: .gitignore  .gitmodules  CMakeLists.txt  Falco.sln  GenerateProjects.bat  premake5.lua
Falco/: CMakeLists.txt  Falco.vcxproj  Falco.vcxproj.filters
Falco/Falco.xcodeproj/: project.pbxproj
Falco/src/: Falco.h  Test.cpp  Test.h  flcpch.cpp  flcpch.h
Falco/src/Falco/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  Window.h
Falco/src/Falco/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Falco/src/Falco/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Falco/src/Falco/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp
Falco/src/Falco/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
Falco/src/Falco/Renderer/: GraphicsContext.h
Falco/src/Platform/OpenGL/: OpenGLContext.cpp  OpenGLContext.h
Falco/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Sandbox/: CMakeLists.txt  Sandbox.vcxproj  imgui.ini
Sandbox/Sandbox.xcodeproj/: project.pbxproj
Sandbox/src/: Application.cpp  CMakeLists.txt  SandboxApp.cpp
bin-int/Debug-x64/Falco/: Falco.dll.recipe  Falco.ilk  vc143.idb
bin-int/Debug-x64/Falco/Falco.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Falco.lastbuildstate  Falco.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
bin-int/Debug-x64/Sandbox/: Sandbox.exe.recipe  Sandbox.ilk  vc143.idb
bin-int/Debug-x64/Sandbox/Sandbox.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
